Change styling for link

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ervinismu.com</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
         integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
 </head>
@@ -26,17 +26,20 @@
                 </div>
 
                 <div class="description">
-                    <p>Currently i'm Software Engineer - Web at <a href="https://www.alodokter.com/"
-                            target="_blank">Alodokter</a></p>
+                    <p>Currently i'm Software Engineer - Web at <a href="https://www.alodokter.com/" target="_blank"
+                            class="alodokter-text-shadow">Alodokter</a></p>
 
                     <p>I love uploading and sharing source code for projects I'm working on on <a
-                            href="https://github.com/ervinismu" target="_blank">Github</a> and
-                        writing articles on Medium.
-                        If you follow me on <a href="https://twitter.com/ErvinIsmu" target="_blank">Twitter</a>, you'll
+                            href="https://github.com/ervinismu" target="_blank" class="github-text-shadow">Github</a>
+                        and
+                        writing articles on <a href="https://medium.com/@ervinismu" target="_blank"
+                            class="medium-text-shadow">Medium</a>.
+                        If you follow me on <a href="https://twitter.com/ErvinIsmu" target="_blank"
+                            class="twitter-text-shadow">Twitter</a>, you'll
                         see my tweets about programming, books and
                         life (among other things).
-                        I'm also on <a href="https://www.linkedin.com/in/ervien-ismunandar-susila/"
-                            target="_blank">LinkedIn</a> for professional networking.</p>
+                        I'm also on <a href="https://www.linkedin.com/in/ervien-ismunandar-susila/" target="_blank"
+                            class="linkedin-text-shadow ">LinkedIn</a> for professional networking.</p>
 
                     <hr>
 
