Redesign porfolio web, include : color, font, etc

--- a/index.html
+++ b/index.html
@@ -13,16 +13,26 @@
 
 <body>
     <div class="container d-flex">
-        <div class="row d-flex">
+        <div class="row d-flex cards">
 
             <div class="profile-photo">
                 <img class="d-block"
                     src="https://avatars0.githubusercontent.com/u/18729060?s=460&u=2b624a37c2b9e2a1ecb41632d578ddab6d85bcd8&v=4"
                     alt="Profile Image">
+                <div class="social-icons">
+                    <ul class="d-flex">
+                        <li><a href="https://www.linkedin.com/in/ervien-ismunandar-susila/" target="_blank"><i
+                                    class="fab fa-linkedin fa-2x"></i></a></li>
+                        <li><a href="https://github.com/ervinismu" target="_blank"><i
+                                    class="fab fa-github fa-2x"></i></a></li>
+                        <li><a href="https://twitter.com/ErvinIsmu" target="_blank"><i
+                                    class="fab fa-twitter fa-2x"></i></a></li>
+                    </ul>
+                </div>
             </div>
             <div class="profile-content">
                 <div class="title">
-                    <h1>I'm Ervin, a Software Engineer</h1>
+                    <h1>Hi, I'm Ervin ..</h1>
                 </div>
 
                 <div class="description">
@@ -30,29 +40,25 @@
                             class="alodokter-text-shadow">Alodokter</a></p>
 
                     <p>I love uploading and sharing source code for projects I'm working on on <a
-                            href="https://github.com/ervinismu" target="_blank" class="github-text-shadow">Github</a>
+                            href="https://github.com/ervinismu" target="_blank" class="github-text-shadow text-block">Github</a>
                         and
-                        writing articles on <a href="https://medium.com/@ervinismu" target="_blank"
+                        writing articles on <a class="text-block" href="https://medium.com/@ervinismu" target="_blank"
                             class="medium-text-shadow">Medium</a>.
                         If you follow me on <a href="https://twitter.com/ErvinIsmu" target="_blank"
-                            class="twitter-text-shadow">Twitter</a>, you'll
+                            class="twitter-text-shadow text-block">Twitter</a>, you'll
                         see my tweets about programming, books and
                         life (among other things).
                         I'm also on <a href="https://www.linkedin.com/in/ervien-ismunandar-susila/" target="_blank"
-                            class="linkedin-text-shadow ">LinkedIn</a> for professional networking.</p>
+                            class="linkedin-text-shadow text-block ">LinkedIn</a> for professional networking.</p>
 
                     <hr>
 
-                    <div class="social-icons">
-                        <ul class="d-flex">
-                            <li><a href="https://www.linkedin.com/in/ervien-ismunandar-susila/" target="_blank"><i
-                                        class="fab fa-linkedin fa-2x"></i></a></li>
-                            <li><a href="https://github.com/ervinismu" target="_blank"><i
-                                        class="fab fa-github fa-2x"></i></a></li>
-                            <li><a href="https://twitter.com/ErvinIsmu" target="_blank"><i
-                                        class="fab fa-twitter fa-2x"></i></a></li>
-                        </ul>
-                    </div>
+                    <h3>Other activities :</h3>
+                    <ul class="list-activities">
+                        <li>Event Management at <a href="https://www.datascience.or.id/" target="blank">Data Science Indonesia</a></li>
+                        <li>Research Team at <a href="https://blankonlinux.or.id/" target="blank">BlankOn Linux</a></li>
+                        <li>Code Crafter at <a href="https://fasih.id/" target="blank">Fasih.id</a></li>
+                    </ul>
                 </div>
 
             </div>
