[erpin] change design and change text description.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ervinismu.com</title>
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;500&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;500&display=swap" rel="stylesheet"> -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
         integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
 </head>
@@ -31,25 +33,18 @@
                 </div>
             </div>
             <div class="profile-content">
-                <div class="title">
-                    <h1>Hi, I'm Ervin ..</h1>
-                </div>
 
                 <div class="description">
-                    <p>Currently i'm Software Engineer - Web at <a href="https://www.alodokter.com/" target="_blank"
-                            class="alodokter-text-shadow">Alodokter</a></p>
+                    <p>Hello i'm Ervin,</p>
 
-                    <p>I love uploading and sharing source code for projects I'm working on on <a
-                            href="https://github.com/ervinismu" target="_blank" class="github-text-shadow text-block">Github</a>
-                        and
-                        writing articles on <a class="text-block" href="https://medium.com/@ervinismu" target="_blank"
-                            class="medium-text-shadow">Medium</a>.
-                        If you follow me on <a href="https://twitter.com/ErvinIsmu" target="_blank"
-                            class="twitter-text-shadow text-block">Twitter</a>, you'll
-                        see my tweets about programming, books and
-                        life (among other things).
-                        I'm also on <a href="https://www.linkedin.com/in/ervien-ismunandar-susila/" target="_blank"
-                            class="linkedin-text-shadow text-block ">LinkedIn</a> for professional networking.</p>
+                    <p>
+                        A software engineer, currently working at Alodokter focused on web development, loves open source and a community that moves to make a positive social impact. 
+                        I enjoy researching and testing new technologies, solving problems and trying to share knowledge with others.
+                    </p>
+
+                    <p>
+                        You can contact me by email to <strong>social.ervin@gmail.com</strong>
+                    </p>
 
                     <hr>
 
@@ -57,7 +52,7 @@
                     <ul class="list-activities">
                         <li>Event Management at <a href="https://www.datascience.or.id/" target="blank">Data Science Indonesia</a></li>
                         <li>Research Team at <a href="https://blankonlinux.or.id/" target="blank">BlankOn Linux</a></li>
-                        <li>Code Crafter at <a href="https://fasih.id/" target="blank">Fasih.id</a></li>
+                        <li>Building at <a href="https://fasih.id/" target="blank">Fasih.id</a></li>
                     </ul>
                 </div>
 
